--- a/templates/documentos/index.html
+++ b/templates/documentos/index.html
@@ -53,20 +53,25 @@
                         <tr>
                             <td class="align-middle"><strong>{{ tipo.nome }}</strong></td>
                             <td class="align-middle">
-                                <span class="badge bg-secondary fs-6">{{ tipo.ultimo_numero }}</span>
+                                <span class="text-secondary fw-semibold">{{ tipo.ultimo_numero }}</span>
                             </td>
                             <td class="align-middle">
-                                <span class="badge bg-primary">{{ tipo.proximo_numero }}</span>
+                                <span class="text-primary fw-bold">{{ tipo.proximo_numero }}</span>
                             </td>
                             <td class="text-center">
-                                <a href="{% url 'incrementar' tipo.id %}" class="btn btn-success btn-sm table-action-btn">
-                                    + Próximo
+                                <a href="{% url 'incrementar' tipo.id %}" class="btn btn-success btn-sm">
+                                    Gerar Número
                                 </a>
-                                <button type="button" class="btn btn-outline-primary btn-sm" data-bs-toggle="modal" data-bs-target="#editarModal" data-tipo-id="{{ tipo.id }}" data-tipo-nome="{{ tipo.nome }}" data-tipo-numero="{{ tipo.ultimo_numero }}">
-                                    Editar
+                                <button type="button" class="btn btn-link text-primary p-1" data-bs-toggle="modal" data-bs-target="#editarModal" data-tipo-id="{{ tipo.id }}" data-tipo-nome="{{ tipo.nome }}" data-tipo-numero="{{ tipo.ultimo_numero }}" title="Editar">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                        <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+                                    </svg>
                                 </button>
-                                <a href="{% url 'excluir_tipo' tipo.id %}" class="btn btn-outline-danger btn-sm" onclick="return confirm('Excluir {{ tipo.nome }}?')">
-                                    Excluir documento
+                                <a href="{% url 'excluir_tipo' tipo.id %}" class="btn btn-link text-danger p-1" onclick="return confirm('Excluir {{ tipo.nome }}?')" title="Excluir">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                                        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                                    </svg>
                                 </a>
                             </td>
                         </tr>
@@ -89,14 +94,14 @@
             <form method="post">
                 {% csrf_token %}
                 <div class="row g-3 align-items-end">
-                    <div class="col-md-8">
+                    <div class="col-auto flex-grow-1">
                         {{ form.nome }}
                         {% if form.nome.errors %}
                         <div class="text-danger small">{{ form.nome.errors }}</div>
                         {% endif %}
                     </div>
-                    <div class="col-md-4">
-                        <button type="submit" class="btn btn-primary w-100">Cadastrar</button>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-primary">Cadastrar</button>
                     </div>
                 </div>
             </form>
